--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddAlarm"></activity>
+        <activity
+            android:name=".AddAlarm"
+            android:parentActivityName="com.example.k4ycer.geoalarm.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.k4ycer.geoalarm.MainActivity" />
+        </activity>
+        <activity
+            android:name=".EditAlarm"
+            android:parentActivityName="com.example.k4ycer.geoalarm.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.k4ycer.geoalarm.MainActivity" />
+        </activity>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAi1LTbllxcxMubgggy6qwUL21mhWJDWZI" />
+        <uses-library android:name="org.apache.http.legacy" android:required="false" />
     </application>
 
 </manifest>
